--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-ble-plx": "^2.0.3",
+    "react-native-device-info": "^10.7.0",
+    "react-native-permissions": "^3.8.3",
     "react-native-quick-base64": "^2.0.6",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
